Google Cast Added

--- a/DailymotionPlayerSample/Info.plist
+++ b/DailymotionPlayerSample/Info.plist
@@ -2,8 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>appcenter-152b941d-a609-4273-bd85-dde352044a1f</string>
+		</dict>
+	</array>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_googlecast._tcp</string>
+		<string>_B88B034A._googlecast._tcp</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>ABCFavorit-Bold.otf</string>
@@ -12,13 +22,6 @@
 		<string>ABCFavorit-Regular.otf</string>
 		<string>ABCFavoritMono-Regular.otf</string>
 		<string>DailySans-Bulky.otf</string>
-	</array>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
-			<string>appcenter-152b941d-a609-4273-bd85-dde352044a1f</string>
-		</dict>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
