--- a/fastlane/ExportOptions.plist
+++ b/fastlane/ExportOptions.plist
@@ -6,11 +6,11 @@
 	<string>manual</string>
 	<key>provisioningProfiles</key>
 	<dict>
-		<key>com.dailymotion.sample.player</key>
+		<key>com.dailymotion.sample.player.sdk</key>
 		<string>Dailymotion Sample In-House</string>
-		<key>com.dailymotion.sample.player.beta</key>
+		<key>com.dailymotion.sample.player.sdk.beta</key>
 		<string>Dailymotion Sample In-House Beta</string>
-		<key>com.dailymotion.sample.player.alpha</key>
+		<key>com.dailymotion.sample.player.sdk.alpha</key>
 		<string>Dailymotion Sample In-House Alpha</string>
 	</dict>
 </dict>
