--- a/fastlane/.env.beta
+++ b/fastlane/.env.beta
@@ -1,7 +1,7 @@
 APPCENTER_OWNER_TYPE = 'organization'
 APPCENTER_OWNER_NAME = 'Dailymotion-Organization'
 APPCENTER_APP_NAME = 'Player-iOS-Sample-App-Beta'
-APPCENTER_DISTRIBUTE_DESTINATIONS = 'Public'
+APPCENTER_DISTRIBUTE_DESTINATIONS = 'public'
 APPCENTER_DISTRIBUTE_TIMEOUT = 240
 
 GYM_CLEAN = 'true'
