--- a/.github/workflows/release_sample_app.yml
+++ b/.github/workflows/release_sample_app.yml
@@ -129,5 +129,16 @@ jobs:
          echo "AppDelegate secret replaced"
          sed -i '' -e "s/AppCenterSecretPLIST/appcenter-${apiToken}/g" ${CI_MAIN_REPO_PATH}/DailymotionPlayerSample/Info.plist
          echo "Info.plist secret replaced"
+         
+         echo "Start build"
          bundle exec fastlane ios SAMPLE_APP_CREATE_RELEASE api_token:$apiToken target:$target bump_type:${{ inputs.version_bump_Type }} --env $env --verbose
+
+         echo "Build Finished"
+         echo "Removing secrets"
+         sed -i '' -e "s/${apiToken}/<<AppCenterSecret>>/g" ${CI_MAIN_REPO_PATH}/DailymotionPlayerSample/AppDelegate.swift
+         echo "AppDelegate secret replaced"
+         sed -i '' -e "s/appcenter-${apiToken}/AppCenterSecretPLIST/g" ${CI_MAIN_REPO_PATH}/DailymotionPlayerSample/Info.plist
+         echo "Info.plist secret replaced"
+         echo "Tag the version"
+         bundle exec fastlane ios TEST_APP_GIT_TAG target:$target --verbose
        shell: bash  
